--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="widget_silenter">Namaz Vakti - Sessize al</string>
     <string name="foundXHadis">%1$s Hadis bulundu</string>
     <string name="afterImsak">Imsak\'dan sonra</string>
-    <string name="beforeSun">Güneş\'den öncle</string>
+    <string name="beforeSun">Güneş\'den önce</string>
     <string name="ecuma">Cuma\'den önce</string>
     <string name="dua">Ezan duası</string>
     <string name="zoomIn">Büyült</string>
