--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -149,4 +149,5 @@
     <string name="category">Kategorie</string>
     <string name="cuma">Freitagsgebet</string>
     <string name="fasting">Fasten</string>
+    <string name="alternative_ongoing">Alternatives Notification-Widget</string>
 </resources>
