--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,5 +150,7 @@
     <string name="cuma">Cuma</string>
     <string name="fasting">Oruç</string>
     <string name="alternative_ongoing">Alternatif Kalıcı Bildirim</string>
+    <string name="mypos">Ben</string>
+    <string name="switchCompass">Pusula/Harita</string>
 
 </resources>
