--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -219,5 +219,7 @@
     <string name="zoomIn">Größer</string>
     <string name="zoomOut">Kleiner</string>
     <string name="zuhr">Zuhr</string>
+    <string name="langAr">Arabisch</string>
+    <string name="calculated">Berechnet</string>
 
 </resources>
