fixed bugs + removed analytics

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -216,4 +216,6 @@
     <string name="zuhr">الظهر</string>
     <string name="langAr">عربي</string>
     <string name="calculated">محسوب</string>
+    <string name="bitcoin">Bitcoin</string>
+    <string name="paypal">Paypal</string>
 </resources>
