--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -193,7 +193,7 @@
     <string name="touchToSelectCity">Toouch hier to select City</string>
     <string name="transWhiteWidget">Transparent White Widget</string>
     <string name="transWidget">Transparent Widget</string>
-    <string name="tryVibration">Try</string>
+    <string name="test">Try</string>
     <string name="use12h">Use 12 Hours Format</string>
     <string name="useArabicNames">Use Arabic Prayertimes</string>
     <string name="useSilenter">Silent</string>
@@ -224,5 +224,10 @@
     <string name="bitcoin">Bitcoin</string>
     <string name="paypal">Paypal</string>
     <string name="beta_tester">Become a tester</string>
+    <string name="widgetClock2">Prayer Times - 2*2 Clock</string>
+    <string name="numbers">Digits</string>
+    <string name="dateFormat3">31 December </string>
+    <string name="hDateFormat3">30 Muharram </string>
+    <string name="test_in_5secs">You will get the Notification in 5 seconds</string>
 
 </resources>
